# MENCOIN

./: .breakpoints  block_chain_value.txt  buy_sell_log.txt  hashes.txt  hello.db  main.py  mankind.txt  market.txt  myfile.txt  passwords.txt  porwatts_hashes  pyproject.toml  sad.txt  where_to_start.txt
wallets/: 142611.txt  Jmagicc21.txt  Man123.txt  THICCheese.txt  e123.txt  hi.txt  l.txt  queso.txt  squidcoin5.txt  test.txt  yeetus.txt  yolo1.txt  yomama.txt
