[tool.poetry]
name = "MENcoinTM"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.0"
databases = "^0.5.3"
Flask = "^2.0.2"
mysql-connector = "^2.2.9"
python-parallel = "^0.9.1"
colorama = "^0.4.4"
discord = "^1.7.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
